--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/akashic-pdi": "~1.10.0",
+    "@akashic/akashic-pdi": "file:../akashic-pdi/akashic-akashic-pdi-1.10.2.tgz",
     "@akashic/amflow": "~0.2.1",
     "@akashic/playlog": "~1.3.0",
     "@types/node": "~9.4.2",
