--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akashic/pdi-browser",
-  "version": "0.10.18",
+  "version": "0.10.19",
   "description": "An akashic-pdi implementatation for Web browsers",
   "main": "index.js",
   "typings": "lib/index.d.ts",
@@ -33,7 +33,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/akashic-pdi": "file:../akashic-pdi/akashic-akashic-pdi-1.10.2.tgz",
+    "@akashic/akashic-pdi": "~1.10.3",
     "@akashic/amflow": "~0.2.1",
     "@akashic/playlog": "~1.3.0",
     "@types/node": "~9.4.2",
