--- a/package.json
+++ b/package.json
@@ -43,27 +43,24 @@
     "@akashic/akashic-pdi": "~2.5.0",
     "@akashic/amflow": "~0.3.1",
     "@akashic/playlog": "~1.3.0",
-    "@types/node": "~9.4.2",
-    "browserify": "~11.0.0",
+    "@types/node": "~12.7.0",
+    "browserify": "~16.4.0",
     "cpx": "^1.5.0",
     "es5-shim": "~4.5.11",
     "exorcist": "~1.0.0",
-    "glob": "~5.0.6",
-    "jasmine": "~2.1.1",
-    "jasmine-reporters": "~2.0.4",
-    "jasmine-terminal-reporter": "~0.9.1",
+    "glob": "~7.1.4",
+    "jasmine": "~3.4.0",
+    "jasmine-reporters": "~2.3.2",
+    "jasmine-terminal-reporter": "~1.0.3",
     "mv": "^2.1.1",
-    "node-static": "~0.7.11",
-    "npm-relative-install": "^1.0.1",
-    "phantomjs": "~1.9.16",
-    "reftest-runner": "~0.4.0",
-    "remark-cli": "~2.0.0",
-    "remark-lint": "~5.0.1",
-    "shx": "~0.2.2",
-    "testem": "~0.9.0",
-    "tslint": "~5.4.3",
+    "phantomjs": "~2.1.7",
+    "remark-cli": "5.0.0",
+    "remark-lint": "~6.0.5",
+    "shx": "~0.3.2",
+    "testem": "~2.17.0",
+    "tslint": "~5.18.0",
     "typescript": "~2.9.2",
-    "uglify-js": "~3.3.9"
+    "uglify-js": "~3.6.0"
   },
   "dependencies": {
     "@akashic/akashic-engine": "~2.4.14"
