--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,28 @@
 {
   "extends": [
     "config:base"
+  ],
+  "timezone": "Asia/Tokyo",
+  "schedule": ["every weekend"],
+  "labels": ["dependencies"],
+  "assignees": [""],
+  "reviewers": [""],
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0,
+  "separateMinorPatch": true,
+  "baseBranches": ["master", "ae1x-master"],
+  "packageRules": [
+    {
+      "packagePatterns": ["^@akashic/"],
+      "enabled": false
+    },
+    {
+      "updateTypes": ["minor"],
+      "groupName": "all dependencies"
+    },
+    {
+      "updateTypes": ["patch"],
+      "groupName": "all dependencies"
+    }
   ]
 }
