--- a/renovate.json
+++ b/renovate.json
@@ -27,6 +27,10 @@
     {
       "updateTypes": ["patch"],
       "groupName": "all dependencies"
+    },
+    {
+      "updateTypes": ["major"],
+      "enabled": false
     }
   ]
 }
