--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akashic/pdi-browser",
-  "version": "1.8.1",
+  "version": "2.0.0-beta.0",
   "description": "An akashic-pdi implementatation for Web browsers",
   "main": "index.js",
   "typings": "lib/full/index.d.ts",
@@ -40,7 +40,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/akashic-pdi": "~2.7.0",
+    "@akashic/akashic-pdi": "~3.0.0-beta.0",
     "@akashic/amflow": "~0.3.1",
     "@akashic/playlog": "~1.3.0",
     "@types/node": "12.12.18",
@@ -63,9 +63,10 @@
     "uglify-js": "3.7.2"
   },
   "dependencies": {
-    "@akashic/akashic-engine": "~2.6.0"
+    "@akashic/akashic-engine": "~3.0.0-beta.2"
   },
   "publishConfig": {
-    "@akashic:registry": "https://registry.npmjs.org/"
+    "@akashic:registry": "https://registry.npmjs.org/",
+    "tag": "next"
   }
 }
