--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/akashic-pdi": "~3.0.0-beta.1",
+    "@akashic/akashic-pdi": "file:../akashic-pdi/akashic-akashic-pdi-3.0.0-beta.2.tgz",
     "@akashic/amflow": "~1.0.0",
     "@akashic/playlog": "~2.0.0",
     "@types/node": "12.12.18",
@@ -63,7 +63,7 @@
     "uglify-js": "3.7.2"
   },
   "dependencies": {
-    "@akashic/akashic-engine": "~3.0.0-beta.24"
+    "@akashic/trigger": "~1.0.0"
   },
   "publishConfig": {
     "@akashic:registry": "https://registry.npmjs.org/",
