--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/akashic-pdi": "file:../akashic-pdi/akashic-akashic-pdi-3.0.0-beta.2.tgz",
-    "@akashic/amflow": "~1.0.0",
-    "@akashic/playlog": "~2.0.0",
+    "@akashic/amflow": "~2.0.0",
+    "@akashic/pdi-types": "~1.0.0",
+    "@akashic/playlog": "~3.0.0",
     "@types/node": "12.12.18",
     "browserify": "16.5.0",
     "cpx": "1.5.0",
