--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "testem:before": "node ./script/makeTestBundle.js > ./script/test-bundle.js",
     "testem:after": "shx rm -rf ./script/test-bundle.js",
     "lint": "npm run lint:ts && npm run lint:md",
-    "lint:ts": "tslint --project tsconfig.json -c tslint.json",
+    "lint:ts": "eslint -c .eslintrc src/**/*.ts --fix",
     "lint:md": "remark ./*.md --frail --no-stdout --rc-path ./.remarkrc",
     "test": "npm run lint && testem ci"
   },
@@ -41,12 +41,17 @@
   ],
   "devDependencies": {
     "@akashic/amflow": "~3.0.0",
+    "@akashic/eslint-config": "~0.1.2",
     "@akashic/pdi-types": "~1.1.0",
     "@akashic/playlog": "~3.1.0",
     "@types/node": "12.12.62",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
     "browserify": "16.5.2",
     "cpx": "1.5.0",
     "es5-shim": "4.5.14",
+    "eslint": "7.18.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.3",
     "exorcist": "1.0.1",
     "glob": "7.1.6",
     "jasmine": "3.6.1",
@@ -58,7 +63,6 @@
     "remark-lint": "6.0.6",
     "shx": "0.3.2",
     "testem": "3.2.0",
-    "tslint": "5.20.1",
     "typescript": "3.9.7",
     "uglify-js": "3.11.1"
   },
