--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "testem:before": "node ./script/makeTestBundle.js > ./script/test-bundle.js",
     "testem:after": "shx rm -rf ./script/test-bundle.js",
     "lint": "npm run lint:ts && npm run lint:md",
-    "lint:ts": "eslint -c .eslintrc src/**/*.ts --fix",
+    "lint:ts": "eslint src/*.ts src/*.ts src/**/*.ts --fix",
     "lint:md": "remark ./*.md --frail --no-stdout --rc-path ./.remarkrc",
     "test": "npm run lint && testem ci"
   },
