--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "npm run clean && npm run build",
+    "prepare": "npm run clean && npm run build",
     "clean": "npm run clean:ts && npm run testem:after",
     "clean:ts": "shx rm -rf ./lib && shx rm -rf ./build",
     "build": "npm run compile:ts && npm run compile:bundle && npm run compile:minify",
@@ -57,6 +57,7 @@
     "@akashic/akashic-engine": "~1.14.0"
   },
   "publishConfig": {
-    "@akashic:registry": "https://registry.npmjs.org/"
+    "@akashic:registry": "https://registry.npmjs.org/",
+    "tag": "for_ae1x"
   }
 }
