--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,7 @@ jobs:
             ${{ env.cache-version }}-${{ runner.os }}-
       - name: Prepare
         run: |
-          npm ci --ignore-scripts
-          npm run build
+          npm ci
           npm test
       - name: Publish and Release
         uses: akashic-games/action-release@v1
