--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akashic/pdi-browser",
-  "version": "2.1.0",
+  "version": "2.2.0-feature.0",
   "description": "An akashic-pdi implementatation for Web browsers",
   "main": "index.js",
   "typings": "lib/full/index.d.ts",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@akashic/amflow": "~3.1.0",
     "@akashic/eslint-config": "~0.1.2",
-    "@akashic/pdi-types": "~1.2.0",
+    "@akashic/pdi-types": "1.3.0-feature.0",
     "@akashic/playlog": "~3.1.0",
     "@types/node": "14.17.15",
     "@typescript-eslint/eslint-plugin": "4.31.0",
@@ -70,6 +70,7 @@
     "@akashic/trigger": "~1.0.0"
   },
   "publishConfig": {
-    "@akashic:registry": "https://registry.npmjs.org/"
+    "@akashic:registry": "https://registry.npmjs.org/",
+    "tag": "feature"
   }
 }
