--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@akashic/amflow": "~3.1.0",
     "@akashic/eslint-config": "~0.1.2",
-    "@akashic/pdi-types": "1.3.0-feature.0",
+    "@akashic/pdi-types": "~1.3.0",
     "@akashic/playlog": "~3.1.0",
     "@types/node": "14.17.15",
     "@typescript-eslint/eslint-plugin": "4.31.0",
