--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,6 @@ name: test
 
 on: [push, pull_request]
 
-env:
-  cache-version: v1
-
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -12,24 +9,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node: [12.x, 14.x]
+        node: [14.x, 16.x]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
-      - name: Cache node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ env.cache-version }}-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ env.cache-version }}-${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ env.cache-version }}-${{ runner.os }}-build-
-            ${{ env.cache-version }}-${{ runner.os }}-
-      - name: Checkout code
-        uses: actions/checkout@v3
+          cache: npm
       - name: Run test
         run: |
           npm ci
