--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@akashic/pdi-browser",
   "version": "2.2.2",
-  "description": "An akashic-pdi implementatation for Web browsers",
+  "description": "An akashic-pdi implementation for Web browsers",
   "main": "index.js",
   "typings": "lib/full/index.d.ts",
   "scripts": {
