--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akashic/pdi-browser",
-  "version": "2.2.2",
+  "version": "2.3.0-beta.0",
   "description": "An akashic-pdi implementation for Web browsers",
   "main": "index.js",
   "typings": "lib/full/index.d.ts",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@akashic/amflow": "~3.1.0",
     "@akashic/eslint-config": "~1.1.0",
-    "@akashic/pdi-types": "~1.3.0",
+    "@akashic/pdi-types": "1.4.0-beta.0",
     "@akashic/playlog": "~3.1.0",
     "@types/node": "16.11.45",
     "@typescript-eslint/eslint-plugin": "5.12.1",
