chore: release feature branch

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@akashic/trigger": "~1.0.1"
   },
   "publishConfig": {
-    "@akashic:registry": "https://registry.npmjs.org/"
+    "@akashic:registry": "https://registry.npmjs.org/",
+    "tag": "next"
   }
 }
