--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@akashic/pdi-browser",
-  "version": "2.3.0-beta.0",
+  "version": "2.3.0",
   "description": "An akashic-pdi implementation for Web browsers",
   "main": "index.js",
   "typings": "lib/full/index.d.ts",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@akashic/amflow": "~3.1.0",
     "@akashic/eslint-config": "~1.1.0",
-    "@akashic/pdi-types": "1.4.0-beta.1",
+    "@akashic/pdi-types": "~1.4.0",
     "@akashic/playlog": "~3.1.0",
     "@types/node": "16.11.45",
     "@typescript-eslint/eslint-plugin": "5.12.1",
@@ -70,7 +70,6 @@
     "@akashic/trigger": "~1.0.1"
   },
   "publishConfig": {
-    "@akashic:registry": "https://registry.npmjs.org/",
-    "tag": "next"
+    "@akashic:registry": "https://registry.npmjs.org/"
   }
 }
