--- a/package.json
+++ b/package.json
@@ -40,34 +40,34 @@
     "index.js"
   ],
   "devDependencies": {
-    "@akashic/amflow": "~3.1.0",
-    "@akashic/eslint-config": "~1.1.0",
-    "@akashic/pdi-types": "~1.4.0",
-    "@akashic/playlog": "~3.1.0",
-    "@types/node": "16.11.56",
-    "@typescript-eslint/eslint-plugin": "5.12.1",
-    "browserify": "17.0.0",
-    "cpx": "1.5.0",
-    "es5-shim": "4.6.7",
-    "eslint": "8.10.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.1.5",
-    "exorcist": "2.0.0",
-    "glob": "8.0.3",
-    "jasmine": "4.0.2",
-    "jasmine-reporters": "2.5.0",
-    "jasmine-terminal-reporter": "1.0.3",
-    "mv": "2.1.1",
-    "phantomjs": "2.1.7",
-    "remark-cli": "11.0.0",
-    "remark-lint": "9.1.1",
-    "shx": "0.3.4",
-    "testem": "3.6.0",
-    "typescript": "4.5.5",
-    "uglify-js": "3.15.5"
+    "@akashic/amflow": "^3.1.0",
+    "@akashic/eslint-config": "^1.1.0",
+    "@akashic/pdi-types": "^1.4.0",
+    "@akashic/playlog": "^3.1.0",
+    "@types/node": "^16.11.56",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "browserify": "^17.0.0",
+    "cpx": "^1.5.0",
+    "es5-shim": "^4.6.7",
+    "eslint": "^8.10.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.5",
+    "exorcist": "^2.0.0",
+    "glob": "^8.0.3",
+    "jasmine": "^4.0.2",
+    "jasmine-reporters": "^2.5.0",
+    "jasmine-terminal-reporter": "^1.0.3",
+    "mv": "^2.1.1",
+    "phantomjs": "^2.1.7",
+    "remark-cli": "^11.0.0",
+    "remark-lint": "^9.1.1",
+    "shx": "^0.3.4",
+    "testem": "^3.6.0",
+    "typescript": "^4.8.4",
+    "uglify-js": "^3.15.5"
   },
   "dependencies": {
-    "@akashic/trigger": "~1.0.1"
+    "@akashic/trigger": "^1.0.1"
   },
   "publishConfig": {
     "@akashic:registry": "https://registry.npmjs.org/"
