--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/full/index.d.ts",
   "scripts": {
     "prepare": "npm run clean && npm run build",
-    "clean": "npm run clean:ts && npm run testem:after",
+    "clean": "npm run clean:ts",
     "clean:ts": "shx rm -rf ./lib && shx rm -rf ./build",
     "build": "npm run compile:ts && npm run compile:bundle && npm run compile:minify",
     "build:full": "npm run compile:ts && npm run compile:bundle:full && npm run compile:minify:full",
@@ -19,12 +19,11 @@
     "compile:minify": "npm run compile:minify:full && npm run compile:minify:canvas",
     "compile:minify:full": "uglifyjs ./build/pdi-browser.js --compress --mangle -o ./build/pdi-browser.min.js",
     "compile:minify:canvas": "uglifyjs ./build/pdi-browser.canvas.js --compress --mangle -o ./build/pdi-browser.canvas.min.js",
-    "testem:before": "node ./script/makeTestBundle.js > ./script/test-bundle.js",
-    "testem:after": "shx rm -rf ./script/test-bundle.js",
     "lint": "npm run lint:ts && npm run lint:md",
     "lint:ts": "eslint \"src/**/*.ts\" --fix",
     "lint:md": "remark ./*.md --frail --no-stdout --rc-path ./.remarkrc",
-    "test": "npm run lint && testem ci"
+    "jest": "jest",
+    "test": "npm run lint && npm run jest"
   },
   "author": "DWANGO Co., Ltd.",
   "license": "MIT",
@@ -44,27 +43,24 @@
     "@akashic/eslint-config": "^1.1.0",
     "@akashic/pdi-types": "^1.4.0",
     "@akashic/playlog": "^3.1.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "^16.11.56",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "browserify": "^17.0.0",
     "cpx": "^1.5.0",
-    "es5-shim": "^4.6.7",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.5",
     "exorcist": "^2.0.0",
-    "glob": "^8.0.3",
-    "jasmine": "^4.0.2",
-    "jasmine-reporters": "^2.5.0",
-    "jasmine-terminal-reporter": "^1.0.3",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "mv": "^2.1.1",
-    "phantomjs": "^2.1.7",
     "remark-cli": "^11.0.0",
     "remark-lint": "^9.1.1",
     "shx": "^0.3.4",
-    "testem": "^3.6.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
-    "uglify-js": "^3.15.5"
+    "uglify-js": "^3.17.3"
   },
   "dependencies": {
     "@akashic/trigger": "^1.0.1"
