--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@akashic/playlog": "^3.1.0",
     "@types/jest": "^29.2.0",
     "@types/node": "^16.11.56",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "browserify": "^17.0.0",
     "cpx": "^1.5.0",
@@ -55,8 +56,11 @@
     "jest": "^29.2.1",
     "jest-environment-jsdom": "^29.2.1",
     "mv": "^2.1.1",
+    "node-fetch": "^2.6.7",
+    "portfinder": "^1.0.32",
     "remark-cli": "^11.0.0",
     "remark-lint": "^9.1.1",
+    "serve-handler": "^6.1.3",
     "shx": "^0.3.4",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
