--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "compile:minify": "npm run compile:minify:full && npm run compile:minify:canvas",
     "compile:minify:full": "uglifyjs ./build/pdi-browser.js --compress --mangle -o ./build/pdi-browser.min.js",
     "compile:minify:canvas": "uglifyjs ./build/pdi-browser.canvas.js --compress --mangle -o ./build/pdi-browser.canvas.min.js",
-    "lint": "npm run lint:ts && npm run lint:md",
+    "test": "npm run lint && npm run jest",
+    "lint": "run-s lint:**",
     "lint:ts": "eslint \"src/**/*.ts\" --fix",
     "lint:md": "remark ./*.md --frail --no-stdout --rc-path ./.remarkrc",
-    "jest": "jest",
-    "test": "npm run lint && npm run jest"
+    "jest": "run-s jest:**",
+    "jest:unit": "jest --projects jest.unit.config.js",
+    "jest:e2e": "cpx build/pdi-browser.js e2e/public/ && jest --projects jest.e2e.config.js --runInBand --detectOpenHandles"
   },
   "author": "DWANGO Co., Ltd.",
   "license": "MIT",
@@ -54,10 +56,12 @@
     "eslint-plugin-jest": "^26.1.5",
     "exorcist": "^2.0.0",
     "jest": "^29.2.1",
-    "jest-environment-jsdom": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.2",
     "mv": "^2.1.1",
     "node-fetch": "^2.6.7",
+    "npm-run-all": "^4.1.5",
     "portfinder": "^1.0.32",
+    "puppeteer": "^19.1.2",
     "remark-cli": "^11.0.0",
     "remark-lint": "^9.1.1",
     "serve-handler": "^6.1.3",
