--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "npm run lint:ts && npm run lint:md",
     "lint:ts": "tslint --project tsconfig.json -c tslint.json",
     "lint:md": "remark ./*.md --frail --no-stdout --rc-path ./.remarkrc",
-    "test": "npm run lint && testem ci"
+    "test": "npm run lint"
   },
   "author": "DWANGO Co., Ltd.",
   "license": "MIT",
@@ -44,7 +44,6 @@
     "jasmine": "3.6.4",
     "jasmine-reporters": "2.3.2",
     "jasmine-terminal-reporter": "1.0.3",
-    "phantomjs": "2.1.7",
     "remark-cli": "5.0.0",
     "remark-lint": "6.0.6",
     "shx": "0.3.3",
