--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # latest(24.04.2)の場合、puppeteerのバージョンの関係でe2eテストに失敗してしまうため、一旦22.04にダウングレード
     name: Publish and Release
     steps:
       - name: Checkout code
