--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ jobs:
     name: Node ${{ matrix.node }} / ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        # ubuntu-latest(24.04.2)の場合、puppeteerのバージョンの関係でe2eテストに失敗してしまうため、ubuntuを一旦22.04にダウングレード
+        os: [ubuntu-22.04, windows-latest]
         node: [16.x, 18.x]
     steps:
       - name: Checkout code
